i fixed the spacing between the toggle and the label

--- a/packages/core/src/components/toggle/toggle.scss
+++ b/packages/core/src/components/toggle/toggle.scss
@@ -15,9 +15,6 @@
   display: inline-flex;
   flex-direction: row;
   position: relative;
-  height: 1.5rem;
-  margin-block-start: 0.25rem;
-  margin-block-end: 0.25rem;
 
   input[type='checkbox'] {
     display: none;
@@ -25,7 +22,7 @@
 
   .wrapper {
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     width: 100%;
     height: 100%;
   }
@@ -35,8 +32,9 @@
     white-space: normal;
     overflow: hidden;
     text-overflow: ellipsis;
-    margin-block-start: 0.125rem;
-    margin-inline-start: 0.5rem;
+    margin: 0;
+    margin-left: 0.625rem;
+    align-self: center;
   }
 
   .switch {
@@ -47,6 +45,7 @@
     min-width: 3rem;
     max-width: 3rem;
     height: 1.5rem;
+    margin: 0.25rem 0;
   }
 
   .slider {
